k8s/base/oci-growfs.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: oci-growfs
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: oci-growfs
  template:
    metadata:
      labels:
        app: oci-growfs
    spec:
      hostPID: true
      priorityClassName: system-node-critical
      containers:
      - name: pause
        image: registry.k8s.io/pause:3.9
      volumes:
      - name: host
        hostPath:
          path: /
      tolerations:
      - operator: Exists
      nodeSelector:
        kubernetes.io/arch: arm64
